--- a/AR-RepairApp/Packages/manifest.json
+++ b/AR-RepairApp/Packages/manifest.json
@@ -6,9 +6,11 @@
     "com.unity.inputsystem": "1.9.0",
     "com.unity.learn.iet-framework": "4.0.0",
     "com.unity.learn.iet-framework.authoring": "1.2.2",
+    "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.arcore": "6.0.3",
